fix(DPE-2985): compile client libraries with java 17